--- a/index.html
+++ b/index.html
@@ -219,6 +219,15 @@
         }
     </style>
 </head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-2TXXJW3QG1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-2TXXJW3QG1');
+    </script>
 <body>
     <header class="hero">
         <div class="container">
