revisão da tabela

--- a/index.html
+++ b/index.html
@@ -791,22 +791,22 @@
                     <tr>
                         <td><strong>Free</strong></td>
                         <td>Grátis</td>
-                        <td>Comunidade básica, 1 curso básico</td>
+                        <td>Comunidade básica, cursos básicos</td>
                     </tr>
                     <tr>
                         <td><strong>Econômico</strong></td>
                         <td>R$10-25/mês</td>
-                        <td>50 créditos IA, cursos mensais</td>
+                        <td>+ 1 Curso exclusivo mensal, foruns exclusivos</td>
                     </tr>
                     <tr>
                         <td><strong>Tipo</strong></td>
                         <td>R$50-150/mês</td>
-                        <td>Redmine Cloud 1GB, 200 créditos IA</td>
+                        <td>+ Redmine Cloud 1GB, 3 cursos mensais</td>
                     </tr>
                     <tr>
-                        <td><strong>Penthouse</strong></td>
+                        <td><strong>Premium</strong></td>
                         <td>R$200-1000/mês</td>
-                        <td>Suporte 24/7, cursos completos</td>
+                        <td>+ Suporte 24/7, todos os cursos</td>
                     </tr>
                 </tbody>
             </table>
