--- a/index.html
+++ b/index.html
@@ -773,7 +773,7 @@
                         <li><i class="fas fa-cloud"></i> Infraestrutura gerenciada na nuvem</li>
                         <li><i class="fas fa-graduation-cap"></i> Cursos especializados aprofundados</li>
                         <li><i class="fas fa-comments"></i> Fóruns exclusivos para networking avançado</li>
-                        <li><i class="fas fa-robot"></i> Créditos para ferramentas de IA</li>
+                        <li><i class="fas fa-robot"></i> Automações para ferramentas</li>
                     </ul>
                     <p>Assim garantimos recursos para evolução contínua do ecossistema, enquanto mantemos o acesso democrático ao conhecimento.</p>
                 </div>
