--- a/index.html
+++ b/index.html
@@ -7,565 +7,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <style>
-        :root {
-            --primary: #1a56db;
-            --primary-dark: #0e2b5c;
-            --secondary: #ff6f61;
-            --accent: #10b981;
-            --light: #f8f9fa;
-            --dark: #1f2937;
-            --gray: #6b7280;
-            --light-gray: #e5e7eb;
-        }
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Roboto', sans-serif;
-            line-height: 1.6;
-            color: var(--dark);
-            background-color: var(--light);
-            overflow-x: hidden;
-        }
-
-        h1, h2, h3, h4, h5, h6 {
-            font-family: 'Montserrat', sans-serif;
-            font-weight: 700;
-            line-height: 1.2;
-        }
-
-        .container {
-            width: 100%;
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 1.5rem;
-        }
-
-        /* Header */
-        header {
-            background: linear-gradient(135deg, var(--primary-dark) 0%, var(--primary) 100%);
-            color: white;
-            padding: 1.5rem 0;
-            position: sticky;
-            top: 0;
-            z-index: 100;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-        }
-
-        .header-container {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        .logo {
-            display: flex;
-            align-items: center;
-            gap: 0.75rem;
-            font-size: 1.75rem;
-            font-weight: 800;
-        }
-
-        .logo i {
-            color: var(--secondary);
-        }
-
-        nav ul {
-            display: flex;
-            list-style: none;
-            gap: 2rem;
-        }
-
-        nav a {
-            color: white;
-            text-decoration: none;
-            font-weight: 500;
-            font-size: 1.1rem;
-            transition: color 0.3s;
-        }
-
-        nav a:hover {
-            color: var(--secondary);
-        }
-
-        .btn {
-            display: inline-block;
-            background-color: var(--secondary);
-            color: white;
-            padding: 0.8rem 2rem;
-            border-radius: 4px;
-            text-decoration: none;
-            font-weight: bold;
-            font-size: 1.1rem;
-            transition: all 0.3s ease;
-            text-align: center;
-            border: none;
-            cursor: pointer;
-        }
-
-        .btn:hover {
-            background-color: #e05a50;
-            transform: translateY(-3px);
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-        }
-
-        .btn-outline {
-            background: transparent;
-            border: 2px solid white;
-            margin-left: 1rem;
-        }
-
-        .btn-outline:hover {
-            background: rgba(255,255,255,0.1);
-        }
-
-        /* Hero Section */
-        .hero {
-            background: linear-gradient(rgba(14, 43, 92, 0.9), rgba(14, 43, 92, 0.95)), url('https://images.unsplash.com/photo-1504307651254-35680f356dfd?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1920&q=80') center/cover no-repeat;
-            color: white;
-            padding: 6rem 0;
-            text-align: center;
-        }
-
-        .hero h1 {
-            font-size: 3.5rem;
-            margin-bottom: 1.5rem;
-            max-width: 800px;
-            margin-left: auto;
-            margin-right: auto;
-        }
-
-        .hero p {
-            font-size: 1.5rem;
-            max-width: 700px;
-            margin: 0 auto 2.5rem;
-            opacity: 0.9;
-        }
-
-        .hero-btns {
-            display: flex;
-            justify-content: center;
-            gap: 1rem;
-            margin-top: 2rem;
-        }
-
-        /* Problem Section */
-        .problem {
-            padding: 5rem 0;
-            background-color: white;
-        }
-
-        .section-header {
-            text-align: center;
-            margin-bottom: 3.5rem;
-        }
-
-        .section-header h2 {
-            font-size: 2.5rem;
-            color: var(--primary-dark);
-            margin-bottom: 1rem;
-        }
-
-        .section-header p {
-            font-size: 1.25rem;
-            color: var(--gray);
-            max-width: 700px;
-            margin: 0 auto;
-        }
-
-        .problem-stats {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 2rem;
-            margin-top: 3rem;
-        }
-
-        .stat-card {
-            background: var(--light);
-            border-radius: 8px;
-            padding: 2rem;
-            text-align: center;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.05);
-            transition: transform 0.3s;
-        }
-
-        .stat-card:hover {
-            transform: translateY(-10px);
-        }
-
-        .stat-value {
-            font-size: 2.5rem;
-            font-weight: 800;
-            color: var(--secondary);
-            margin-bottom: 0.5rem;
-        }
-
-        /* Solution Section */
-        .solution {
-            padding: 5rem 0;
-            background: linear-gradient(to bottom, #f0f7ff, white);
-        }
-
-        .pillars {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 2rem;
-            margin-top: 2rem;
-        }
-
-        .pillar-card {
-            background: white;
-            border-radius: 8px;
-            padding: 2.5rem 2rem;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.08);
-            transition: transform 0.3s;
-            text-align: center;
-        }
-
-        .pillar-card:hover {
-            transform: translateY(-10px);
-        }
-
-        .pillar-icon {
-            font-size: 3rem;
-            color: var(--primary);
-            margin-bottom: 1.5rem;
-        }
-
-        .pillar-card h3 {
-            font-size: 1.75rem;
-            margin-bottom: 1rem;
-            color: var(--primary-dark);
-        }
-
-        /* Ecosystem Section */
-        .ecosystem {
-            padding: 5rem 0;
-            background-color: white;
-        }
-
-        .ecosystem-content {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 3rem;
-            align-items: center;
-        }
-
-        .ecosystem-text {
-            padding: 1rem;
-        }
-
-        .ecosystem-text h3 {
-            font-size: 2rem;
-            margin-bottom: 1.5rem;
-            color: var(--primary-dark);
-        }
-
-        .ecosystem-image {
-            background: var(--light);
-            border-radius: 8px;
-            padding: 2rem;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.08);
-            /* Definimos uma altura fixa para o contêiner */
-            height: 450px; /* Ajuste este valor conforme necessário */
-            min-height: unset; /* Remove o min-height anterior para evitar conflito */
-            display: flex;
-            flex-direction: column; /* Garante que os itens (texto e canvas) se empilhem verticalmente */
-            align-items: center; /* Centraliza horizontalmente o conteúdo */
-            justify-content: center; /* Centraliza verticalmente o conteúdo */
-        }
-
-        /* Estilo para o texto acima do gráfico */
-        .chart-title-description {
-            font-size: 1.1em;
-            font-weight: 600;
-            color: var(--primary-dark);
-            margin-bottom: 1rem; /* Espaço entre o texto e o gráfico */
-            text-align: center; /* Centraliza o texto */
-        }
-
-        /* Specific style for the canvas within ecosystem-image */
-        .ecosystem-image #flowChart {
-            flex-grow: 1; /* Permite que o canvas cresça para preencher o espaço restante vertical */
-            width: 100%; /* Garante que o canvas ocupe a largura total */
-            /* Se for necessário, adicione height: 100% aqui também */
-            height: 100%;
-        }
-
-
-        /* Contribute Section */
-        .contribute {
-            padding: 5rem 0;
-            background: linear-gradient(to bottom, white, #f0f7ff);
-        }
-
-        .contribute-options {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 2rem;
-            margin-top: 3rem;
-        }
-
-        .option-card {
-            background: white;
-            border-radius: 8px;
-            padding: 2.5rem 2rem;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.08);
-            transition: transform 0.3s;
-            text-align: center;
-            border-top: 4px solid var(--primary);
-        }
-
-        .option-card:hover {
-            transform: translateY(-10px);
-        }
-
-        .option-icon {
-            font-size: 2.5rem;
-            color: var(--primary);
-            margin-bottom: 1.5rem;
-        }
-
-        .option-card h3 {
-            font-size: 1.5rem;
-            margin-bottom: 1rem;
-            color: var(--primary-dark);
-        }
-
-        /* Sustainability Section */
-        .sustainability {
-            padding: 5rem 0;
-            background-color: white;
-        }
-
-        .sustainability-content {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 3rem;
-            align-items: center;
-        }
-
-        /* Pricing Table */
-        .pricing-table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 2rem;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.08);
-            border-radius: 8px;
-            overflow: hidden; /* Ensures rounded corners apply to content */
-        }
-
-        .pricing-table th, .pricing-table td {
-            padding: 1.2rem;
-            text-align: left;
-            border-bottom: 1px solid var(--light-gray);
-        }
-
-        .pricing-table thead {
-            background-color: var(--primary);
-            color: white;
-        }
-
-        .pricing-table th {
-            font-weight: 600;
-        }
-
-        .pricing-table tbody tr:nth-child(even) {
-            background-color: var(--light);
-        }
-
-        .pricing-table tbody tr:hover {
-            background-color: #eef5ff; /* Light blue on hover */
-        }
-
-        .pricing-table td:first-child {
-            font-weight: bold;
-            color: var(--primary-dark);
-        }
-
-        .plans-chart {
-            background: white;
-            border-radius: 8px;
-            padding: 2rem;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.08);
-            position: relative;
-            min-height: 300px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-        }
-
-        .chart-legend {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 1rem;
-            margin-top: 1.5rem;
-            width: 100%;
-        }
-
-        .legend-item {
-            display: flex;
-            align-items: center;
-            gap: 0.5rem;
-            font-size: 0.9rem;
-        }
-
-        .legend-color {
-            display: inline-block;
-            width: 16px;
-            height: 16px;
-            border-radius: 4px;
-        }
-
-        .premium-benefits {
-            margin: 1.5rem 0;
-            list-style: none;
-        }
-
-        .premium-benefits li {
-            margin-bottom: 0.75rem;
-            padding-left: 1.75rem;
-            position: relative;
-        }
-
-        .premium-benefits i {
-            position: absolute;
-            left: 0;
-            top: 2px;
-            color: var(--primary);
-        }
-
-        /* CTA Section */
-        .cta {
-            padding: 6rem 0;
-            background: linear-gradient(135deg, var(--primary-dark) 0%, var(--primary) 100%);
-            color: white;
-            text-align: center;
-        }
-
-        .cta h2 {
-            font-size: 2.5rem;
-            margin-bottom: 1.5rem;
-        }
-
-        .cta p {
-            font-size: 1.25rem;
-            max-width: 700px;
-            margin: 0 auto 2.5rem;
-            opacity: 0.9;
-        }
-
-        /* Footer */
-        footer {
-            background-color: var(--dark);
-            color: white;
-            padding: 4rem 0 2rem;
-        }
-
-        .footer-content {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 2rem;
-            margin-bottom: 3rem;
-        }
-
-        .footer-column h3 {
-            font-size: 1.5rem;
-            margin-bottom: 1.5rem;
-            color: var(--secondary);
-        }
-
-        .footer-links {
-            list-style: none;
-        }
-
-        .footer-links li {
-            margin-bottom: 0.75rem;
-        }
-
-        .footer-links a {
-            color: var(--light-gray);
-            text-decoration: none;
-            transition: color 0.3s;
-        }
-
-        .footer-links a:hover {
-            color: var(--secondary);
-        }
-
-        .copyright {
-            text-align: center;
-            padding-top: 2rem;
-            border-top: 1px solid rgba(255,255,255,0.1);
-            color: var(--light-gray);
-            font-size: 0.9rem;
-        }
-
-        @media (max-width: 992px) {
-            .ecosystem-content,
-            .sustainability-content {
-                grid-template-columns: 1fr;
-            }
-
-            .hero h1 {
-                font-size: 2.8rem;
-            }
-
-            nav ul {
-                gap: 1.2rem;
-            }
-        }
-
-        @media (max-width: 768px) {
-            .header-container {
-                flex-direction: column;
-                gap: 1rem;
-            }
-
-            .hero-btns {
-                flex-direction: column;
-                align-items: center;
-            }
-
-            .btn-outline {
-                margin-left: 0;
-                margin-top: 1rem;
-            }
-
-            .hero h1 {
-                font-size: 2.2rem;
-            }
-
-            .hero p {
-                font-size: 1.2rem;
-            }
-
-            .section-header h2 {
-                font-size: 2rem;
-            }
-
-            .pricing-table {
-                font-size: 0.9rem;
-            }
-
-            .pricing-table th, .pricing-table td {
-                padding: 0.8rem;
-            }
-        }
-
-        /* Correções específicas para gráficos */
-        #plansChart {
-            width: 100% !important;
-            height: 300px !important;
-        }
-    </style>
+    <link rel="stylesheet" href="css/main.css">
+</head>
 </head>
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-2TXXJW3QG1"></script>
@@ -909,63 +352,8 @@
                 });
             }
 
-            // NOVO GRÁFICO: Chart.js - Gráfico de Áreas do Ecossistema (Gráfico de Barras Horizontal)
-            const ecosystemCtx = document.getElementById('flowChart');
-            if (ecosystemCtx) {
-                new Chart(ecosystemCtx, {
-                    type: 'bar', // Tipo de gráfico de barras
-                    data: {
-                        labels: ['Gestão', 'Automação', 'Dados', 'Educação'],
-                        datasets: [{
-                            label: 'Foco do Ecossistema Foton', // Título do dataset
-                            data: [.8, .1, .4, .1], // Valores arbitrários, apenas para ter barras de mesmo tamanho
-                            backgroundColor: [
-                                getCssVariable('--primary'),
-                                getCssVariable('--primary'),
-                                getCssVariable('--primary'),
-                                getCssVariable('--primary')
-                            ],
-                            borderColor: [
-                                getCssVariable('--primary-dark'),
-                                getCssVariable('--primary-dark'),
-                                getCssVariable('--primary-dark'),
-                                getCssVariable('--primary-dark')
-                            ],
-                            borderWidth: 1
-                        }]
-                    },
-                    options: {
-                        indexAxis: 'y', // Faz com que as barras sejam horizontais
-                        responsive: true,
-                        maintainAspectRatio: false,
-                        plugins: {
-                            legend: {
-                                display: false // Não precisamos de uma legenda para este gráfico simples
-                            },
-                            tooltip: {
-                                callbacks: {
-                                    title: function() { return ''; }, // Remove o título do tooltip
-                                    label: function(context) {
-                                        // Retorna o label do eixo Y e o valor da barra no eixo X
-                                        return `${context.parsed.x*100}%`;
-                                    }
-                                }
-                            }
-                        },
-                        scales: {
-                            x: {
-                                beginAtZero: true,
-                                display: false // Oculta o eixo X, pois os valores são genéricos
-                            },
-                            y: {
-                                grid: {
-                                    display: true // Oculta as linhas de grade do eixo Y para um visual mais limpo
-                                }
-                            }
-                        }
-                    }
-                });
-            }
+            <script src="js/main.js"></script>
+</body>
         });
 
         // Scroll suave
